kubernetes/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardian-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guardian-api
  template:
    metadata:
      labels:
        app: guardian-api
    spec:
      containers:
      - name: api-server
        image: us-central1-docker.pkg.dev/bank-anthos/proactive-guardian-repo/api:v1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: google-creds
          mountPath: "/app"
          readOnly: true
      volumes:
      - name: google-creds
        secret:
          secretName: app-secrets
          items:
          - key: client_secret.json
            path: client_secret.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardian-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guardian-worker
  template:
    metadata:
      labels:
        app: guardian-worker
    spec:
      containers:
      - name: rq-worker
        image: us-central1-docker.pkg.dev/bank-anthos/proactive-guardian-repo/worker:v1
