kubernetes/05-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guardian-api-service
  annotations:
    cloud.google.com/backend-config: '{"default": "guardian-backend-config"}'
spec:
  type: NodePort
  selector:
    app: guardian-api
  ports:
  - port: 80
    targetPort: 8080
